2014-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Interactivity/stdin.pm, server-src/amcheckdump.pl,
	  server-src/amfetchdump.pl, server-src/amvault.pl: Disable
	  interactivity if STDIN can't be read.

2014-05-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c (xml_check_options): Set dumper_kencrypt.

2014-04-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm: Reload the tapelist at every scan.

2014-04-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Improve error message.

2014-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix lock.
	* perl/Amanda/Changer/robot.pm (_get_state): Return "failed".
	* server-src/amlabel.pl (user_msg): Fix for string.

2014-04-25  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/uparse.y: Remove unused variable.

2014-04-25  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_read_cb): Handle eof correctly.

2014-04-25  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/config.m4 (AMANDA_CONFIGURE_ARGS): New macro to set
	  CONFIGURE_ARGS.
	* configure.in: Call AMANDA_CONFIGURE_ARGS
	* common-src/genversion.c: Print CONFIGURE_ARGS.

2014-04-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck-device.pl: Typo.

2014-04-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c: Retry all IPs on connection refused.
	* common-src/security-util.h (struct sec_handle): Add res, next_res,
	  connect_callback, connect_arg, src_ip and port.
	* common-src/stream.c (stream_client_addr): New function to open a
	  connection to a 'struct addrinfo'.
	* common-src/stream.h (stream_client_addr): Add prototype.

2014-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Interactivity/email.pm: Check permission of the
	  check-file.

2014-04-23  Jean-Louis Martineau <martineau@zmanda.com>